WIP: implement message streams using reactive mongoDB and fix profile patch model
